# face_recognition_elastic

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  teste.ipynb
server/: Dockerfile  config.py  dtos.py  elastic_utils.py  main.py  requirements.txt
