[project]
name = "face-recognition-elastic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "deepface>=0.0.96",
    "elasticsearch==8.11.1",
    "fastapi>=0.122.0",
    "jupyter>=1.1.1",
    "opencv-python>=4.12.0.88",
    "pillow>=10.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "ruff>=0.14.6",
    "tf-keras>=2.15.0",
    "uvicorn>=0.33.0",
]
